# gists

./: .gitignore  LICENSE  add_tasks.sh  compile_and_execute.sh  function.hh  gist.py  main.cc  meson.build  meson_clang_native.ini
advent-of-code-2022/: day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day17.cc  day18.cc  day2.cc  day20.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  meson.build
advent-of-code-2023/: day1.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  meson.build
advent-of-code-2024/: day1.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  meson.build
cpp-gist/: bst.cc  function.hh  main.cc  meson.build
input/: day6_ex.in  day7_ex.in
