project('advent-of-code-2022', 'cpp', default_options: ['cpp_std=c++2a'],  license: 'BSD 3-Clause')
progs = [['day1', ['day1.cc']],
         ['day2', ['day2.cc']],
         ['day3', ['day3.cc']],
         ['day4', ['day4.cc']],
         ['day5', ['day5.cc']],
         ['day6', ['day6.cc']],
         ['day7', ['day7.cc']],
         ['day8', ['day8.cc']],
         ['day9', ['day9.cc']],
         ['day10', ['day10.cc']],
         ['day11', ['day11.cc']],
         ['day12', ['day12.cc']],
         ['day13', ['day13.cc']],
         ['day14', ['day14.cc']],
         ['day15', ['day15.cc']]]

foreach p : progs
  exe = executable(p[0], p[1])
endforeach